contents added in nav, some styling done. Font awesome added

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,11 @@
 
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/4cfb43502c.js" crossorigin="anonymous"></script>
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
@@ -29,6 +31,10 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <span>tweeter clone</span>
+    <div>
+      Write a new tweet
+      <i class="fas fa-angle-double-down"></i>
+    </div>
   </nav>
 
   <!-- Page-specific (main) content here -->
