nav styling done

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,12 @@
 <body>
   <!-- Top nav bar (fixed) -->
   <nav>
-    <span>tweeter clone</span>
     <div>
-      Write a new tweet
+      <span class="logo">tweeter</span>
+    </div>
+
+    <div>
+      <span>Write a new tweet</span>
       <i class="fas fa-angle-double-down"></i>
     </div>
   </nav>
