--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,7 @@
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
       <form method="POST" action="/tweets">
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
+        <textarea placeholder="What are you humming about?" name="text" id="tweet-text"></textarea>
         <hr>
         <div>
           <button class="form-button  " type="submit">Tweet</button>
