--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -42,7 +43,7 @@
       <i class="fas fa-angle-double-down"></i>
     </div>
   </nav>
-  <header>
+  <header class="profile-header">
     <div>
       <img class="img" src="/images/profile-hex.png">
     </div>
@@ -65,6 +66,41 @@
         </div>
       </form>
     </section>
+    <article>
+      <header>
+        <div>
+          <img src="/images/avatar.jpg" alt="profile avatar">
+          <span>Newton</span>
+        </div>
+        <div>
+          <span>@MrsJackobs</span>
+        </div>
+      </header>
+      <p>This is the body</p>
+      <hr>
+      <footer>
+        <div></div>
+        <div>
+          <i class="far fa-heart"></i>
+          <i class="far fa-heart"></i>
+          <i class="far fa-heart"></i>
+        </div>
+      </footer>
+    </article>
+
+    <article>
+      <header>
+        <div>
+          <img src="/images/avatar.jpg" alt="profile avatar">
+          <span>Newton</span>
+        </div>
+        <div>
+          <span>@MrsJackobs</span>
+        </div>
+      </header>
+      <footer>
+      </footer>
+    </article>
   </main>
 </body>
 
