tweet container's header css adjusted, very close to prototype

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
     </section>
     <article>
       <header>
-        <div>
+        <div class="image">
           <img src="/images/avatar.jpg" alt="profile avatar">
           <span>Newton</span>
         </div>
@@ -79,7 +79,7 @@
       <p>This is the body</p>
       <hr>
       <footer>
-        <div></div>
+        <div><span>10</span>Days Ago</div>
         <div>
           <i class="far fa-heart"></i>
           <i class="far fa-heart"></i>
