tweet container styling done

--- a/public/index.html
+++ b/public/index.html
@@ -77,12 +77,11 @@
         </div>
       </header>
       <p>This is the body</p>
-      <hr>
       <footer>
-        <div><span>10</span>Days Ago</div>
+        <div><span>10</span> Days Ago</div>
         <div>
-          <i class="far fa-heart"></i>
-          <i class="far fa-heart"></i>
+          <i class="far fa-flag"></i>
+          <i class="fas fa-retweet"></i>
           <i class="far fa-heart"></i>
         </div>
       </footer>
