tweet container hover effetcs css added

--- a/public/index.html
+++ b/public/index.html
@@ -80,9 +80,9 @@
       <footer>
         <div><span>10</span> Days Ago</div>
         <div>
-          <i class="far fa-flag"></i>
+          <i class="fas fa-flag"></i>
           <i class="fas fa-retweet"></i>
-          <i class="far fa-heart"></i>
+          <i class="fas fa-heart"></i>
         </div>
       </footer>
     </article>
