added a temporary footer, made tweet article content's css selector more specific

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
         </div>
       </form>
     </section>
-    <article>
+    <article class="tweet">
       <header>
         <div>
           <img src="/images/avatar.jpg" alt="profile avatar">
@@ -87,6 +87,7 @@
       </footer>
     </article>
   </main>
+  <footer>Temp Footer</footer>
 </body>
 
 </html>
