--- a/public/index.html
+++ b/public/index.html
@@ -66,26 +66,30 @@
         </div>
       </form>
     </section>
-    <article class="tweet">
-      <header>
-        <div>
-          <img src="/images/avatar.jpg" alt="profile avatar">
-          <span>Newton</span>
-        </div>
-        <div>
-          <span>@MrsJackobs</span>
-        </div>
-      </header>
-      <p>This is the body</p>
-      <footer>
-        <div><span>10</span> Days Ago</div>
-        <div>
-          <i class="fas fa-flag"></i>
-          <i class="fas fa-retweet"></i>
-          <i class="fas fa-heart"></i>
-        </div>
-      </footer>
-    </article>
+
+    <section id="tweets-container">
+      <article class="tweet">
+        <header>
+          <div>
+            <img src="/images/avatar.jpg" alt="profile avatar">
+            <span>Newton</span>
+          </div>
+          <div>
+            <span>@MrsJackobs</span>
+          </div>
+        </header>
+        <p>This is the body</p>
+        <footer>
+          <div><span>10</span> Days Ago</div>
+          <div>
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
+
+    </section>
   </main>
   <footer>Temp Footer</footer>
 </body>
