--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/4cfb43502c.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
+  
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
@@ -57,7 +59,7 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form method="POST" action="/tweets">
+      <form id="tweet-form" method="POST" action="/tweets">
         <textarea placeholder="What are you humming about?" name="text" id="tweet-text"></textarea>
         <hr>
         <div>
@@ -68,27 +70,6 @@
     </section>
 
     <section id="tweets-container">
-      <article class="tweet">
-        <header>
-          <div>
-            <img src="/images/avatar.jpg" alt="profile avatar">
-            <span>Newton</span>
-          </div>
-          <div>
-            <span>@MrsJackobs</span>
-          </div>
-        </header>
-        <p>This is the body</p>
-        <footer>
-          <div><span>10</span> Days Ago</div>
-          <div>
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-
     </section>
   </main>
   <footer>Temp Footer</footer>
