--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
       <form id="tweet-form" method="POST" action="/tweets">
-        <textarea placeholder="What are you humming about?" name="text" id="tweet-text"></textarea>
+        <textarea placeholder="What are you humming about?" name="text" id="tweet-text" required></textarea>
         <hr>
         <div>
           <button class="form-button" type="submit">Tweet</button>
