created fixed error message container, error message appearing now instead of alerts

--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,10 @@
   <!-- Page-specific (main) content here -->
   <main class="container">
     <section class="new-tweet">
-      <div class="error-message">You cant have an Empty Tweet!</div>
+      <div class="error-message"><span></span></div>
       <form id="tweet-form" method="POST" action="/tweets">
         <h2>Compose Tweet</h2>
-        <textarea placeholder="What are you humming about?" name="text" id="tweet-text" required></textarea>
+        <textarea placeholder="What are you humming about?" name="text" id="tweet-text"></textarea>
         <hr>
         <div>
           <button class="form-button" type="submit">Tweet</button>
