new button added in nav, clicking the button now makes new tweet section slide down

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,8 @@
     </div>
 
     <div>
-      <span>Write a new tweet</span>
+      <button><strong>Write</strong> a new tweet</button>
+      <!-- <span>Write a new tweet</span> -->
       <i class="fas fa-angle-double-down"></i>
     </div>
   </nav>
@@ -60,7 +61,6 @@
     <section class="new-tweet">
       <div class="error-message"><span></span></div>
       <form id="tweet-form" method="POST" action="/tweets">
-        <h2>Compose Tweet</h2>
         <textarea placeholder="What are you humming about?" name="text" id="tweet-text"></textarea>
         <hr>
         <div>
