added bouncing arrow animation for nav button

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,12 @@
     </div>
 
     <div>
-      <button><strong>Write</strong> a new tweet</button>
+      <button> 
+        <span><strong>Write</strong> a new tweet</span>
+        <i class="fas fa-angle-double-down"></i>
+      </button>
       <!-- <span>Write a new tweet</span> -->
-      <i class="fas fa-angle-double-down"></i>
+      <!-- <i class="fas fa-angle-double-down"></i> -->
     </div>
   </nav>
   <header class="profile-header">
