go to top button added, some styling done

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     </div>
     <br>
     <div>
-      <h2>Your Name</h2>
+      <h2>Timo Werner</h2>
     </div>
   </header>
 
@@ -76,7 +76,11 @@
     <section id="tweets-container">
     </section>
   </main>
-  <footer>Temp Footer</footer>
+  <footer>
+    <div>Temp Footer</div>
+    <button class="go-to-top">TOP</button>
+    
+    </footer>
 </body>
 
 </html>
