--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   <main class="container">
     <header class="profile-header">
       <div>
-        <img class="img" src="/images/profile-hex.png">
+        <img src="/images/profile-hex.png" alt="Profile Avatar">
       </div>
       <br>
       <div>
