footer added, styling of footer also done

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,18 @@
     </div>
   </main>
   <footer>
-    <div>Temp Footer</div>
+    <section class="footer-icons">
+      <!-- Linkedin -->
+      <a href="https://www.linkedin.com/in/tawfiqulhasankhan/"
+        role="button"><i class="fab fa-linkedin-in"></i></a>
+      <!-- Github -->
+      <a href="https://github.com/special3220" role="button"><i
+          class="fab fa-github"></i></a>
+    </section>
+    <div class="author">
+      Created by, Md Tawfiqul Hasan Khan
+    </div>
+    <!-- Button to go top -->
     <button id="toTop">
     </button>
 
